--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.github.nkzawa:socket.io-client:0.3.0'
     implementation 'com.android.support:support-v4:28.0.0-alpha1'
+    implementation 'com.airbnb.android:lottie:2.5.4'
     testImplementation 'junit:junit:4.12'
 }
 
