--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,8 +18,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SplashScreenActivity"
+            android:theme="@style/ActivityTheme"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
             android:name=".LoginActivity"
-            android:label="@string/dashboard">
+            android:label="@string/dashboard"
+            android:theme="@style/ActivityTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,12 +35,12 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:theme="@style/ActivityTheme"
+            android:screenOrientation="portrait"/>
         <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:name=".SettingsActivity"
+            android:theme="@style/ActivityTheme"
+            android:screenOrientation="portrait"/>
 
         <!--
         Set custom default icon. This is used when no icon is set for incoming notification messages.
@@ -66,8 +73,6 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-
-
     </application>
 
 </manifest>
