--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,11 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.google.gms:google-services:4.0.1' // google-services plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,6 +17,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://maven.google.com" }
+        maven { url 'https://jitpack.io' }
     }
 }
 
